// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Month when render prop has not been passed default render 1`] = `
<div>
  <div
    class="test-class-name-month"
  >
    <header
      class="test-class-name-month_header"
    >
      <div
        class="test-class-name-month_header_wrapper"
      >
        <button
          class="test-class-name-header_button is-prev is-disabled"
          data-calendar-value="-1"
          disabled=""
          title="Previous Month"
          type="button"
        >
          &gt;
        </button>
        <h3
          class="test-class-name-month_header_title"
        >
          November 2019
        </h3>
        <button
          class="test-class-name-header_button is-next"
          data-calendar-value="1"
          title="Next Month"
          type="button"
        >
          &lt;
        </button>
      </div>
      <div
        class="test-class-name-month_header_days"
      >
        <div
          class="test-class-name-days_of_week_day is-weekend"
        >
          Mon
        </div>
        <div
          class="test-class-name-days_of_week_day"
        >
          Tue
        </div>
        <div
          class="test-class-name-days_of_week_day"
        >
          Wed
        </div>
        <div
          class="test-class-name-days_of_week_day"
        >
          Thu
        </div>
        <div
          class="test-class-name-days_of_week_day"
        >
          Fri
        </div>
        <div
          class="test-class-name-days_of_week_day"
        >
          Sat
        </div>
        <div
          class="test-class-name-days_of_week_day is-weekend"
        >
          Sun
        </div>
      </div>
    </header>
    <div
      class="test-class-name-week"
    >
      <div
        class="test-class-name-week_number"
      >
        44
      </div>
      <div
        class="test-class-name-week_days"
      >
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-not_selectable is-prev_month is-working_day"
            type="button"
            value="2019-10-28"
          >
            28
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-not_selectable is-prev_month is-working_day"
            type="button"
            value="2019-10-29"
          >
            29
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-not_selectable is-prev_month is-working_day"
            type="button"
            value="2019-10-30"
          >
            30
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-not_selectable is-prev_month is-working_day"
            type="button"
            value="2019-10-31"
          >
            31
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-01"
          >
            1
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-weekend"
            type="button"
            value="2019-11-02"
          >
            2
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-weekend"
            type="button"
            value="2019-11-03"
          >
            3
          </button>
        </div>
      </div>
    </div>
    <div
      class="test-class-name-week"
    >
      <div
        class="test-class-name-week_number"
      >
        45
      </div>
      <div
        class="test-class-name-week_days"
      >
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-04"
          >
            4
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-05"
          >
            5
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-06"
          >
            6
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-07"
          >
            7
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-08"
          >
            8
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-weekend"
            type="button"
            value="2019-11-09"
          >
            9
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-weekend"
            type="button"
            value="2019-11-10"
          >
            10
          </button>
        </div>
      </div>
    </div>
    <div
      class="test-class-name-week"
    >
      <div
        class="test-class-name-week_number"
      >
        46
      </div>
      <div
        class="test-class-name-week_days"
      >
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-11"
          >
            11
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-12"
          >
            12
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-13"
          >
            13
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-14"
          >
            14
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-15"
          >
            15
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-weekend"
            type="button"
            value="2019-11-16"
          >
            16
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-weekend"
            type="button"
            value="2019-11-17"
          >
            17
          </button>
        </div>
      </div>
    </div>
    <div
      class="test-class-name-week"
    >
      <div
        class="test-class-name-week_number"
      >
        47
      </div>
      <div
        class="test-class-name-week_days"
      >
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-18"
          >
            18
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-19"
          >
            19
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-selectable is-working_day"
            type="button"
            value="2019-11-20"
          >
            20
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-selectable is-working_day"
            type="button"
            value="2019-11-21"
          >
            21
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-selectable is-working_day"
            type="button"
            value="2019-11-22"
          >
            22
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-selectable is-weekend"
            type="button"
            value="2019-11-23"
          >
            23
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-selectable is-weekend"
            type="button"
            value="2019-11-24"
          >
            24
          </button>
        </div>
      </div>
    </div>
    <div
      class="test-class-name-week"
    >
      <div
        class="test-class-name-week_number"
      >
        48
      </div>
      <div
        class="test-class-name-week_days"
      >
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-selectable is-working_day"
            type="button"
            value="2019-11-25"
          >
            25
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-selectable is-working_day"
            type="button"
            value="2019-11-26"
          >
            26
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-today is-working_day"
            type="button"
            value="2019-11-27"
          >
            27
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-end_selection is-not_selectable is-selected is-working_day"
            type="button"
            value="2019-11-28"
          >
            28
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-selected is-start_selection is-working_day"
            type="button"
            value="2019-11-29"
          >
            29
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-weekend"
            type="button"
            value="2019-11-30"
          >
            30
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-next_month is-not_selectable is-weekend"
            type="button"
            value="2019-12-01"
          >
            1
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Month when render prop has not been passed when \`showMonthPrev\`, \`showMonthName\`, \`showMonthNext\` \`showDaysOfWeek\` props are \`falsy\` default render 1`] = `
<div>
  <div
    class="test-class-name-month"
  >
    <div
      class="test-class-name-week"
    >
      <div
        class="test-class-name-week_number"
      >
        44
      </div>
      <div
        class="test-class-name-week_days"
      >
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-not_selectable is-prev_month is-working_day"
            type="button"
            value="2019-10-28"
          >
            28
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-not_selectable is-prev_month is-working_day"
            type="button"
            value="2019-10-29"
          >
            29
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-not_selectable is-prev_month is-working_day"
            type="button"
            value="2019-10-30"
          >
            30
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-not_selectable is-prev_month is-working_day"
            type="button"
            value="2019-10-31"
          >
            31
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-01"
          >
            1
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-weekend"
            type="button"
            value="2019-11-02"
          >
            2
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-weekend"
            type="button"
            value="2019-11-03"
          >
            3
          </button>
        </div>
      </div>
    </div>
    <div
      class="test-class-name-week"
    >
      <div
        class="test-class-name-week_number"
      >
        45
      </div>
      <div
        class="test-class-name-week_days"
      >
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-04"
          >
            4
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-05"
          >
            5
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-06"
          >
            6
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-07"
          >
            7
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-08"
          >
            8
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-weekend"
            type="button"
            value="2019-11-09"
          >
            9
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-weekend"
            type="button"
            value="2019-11-10"
          >
            10
          </button>
        </div>
      </div>
    </div>
    <div
      class="test-class-name-week"
    >
      <div
        class="test-class-name-week_number"
      >
        46
      </div>
      <div
        class="test-class-name-week_days"
      >
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-11"
          >
            11
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-12"
          >
            12
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-13"
          >
            13
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-14"
          >
            14
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-15"
          >
            15
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-weekend"
            type="button"
            value="2019-11-16"
          >
            16
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-weekend"
            type="button"
            value="2019-11-17"
          >
            17
          </button>
        </div>
      </div>
    </div>
    <div
      class="test-class-name-week"
    >
      <div
        class="test-class-name-week_number"
      >
        47
      </div>
      <div
        class="test-class-name-week_days"
      >
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-18"
          >
            18
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-working_day"
            type="button"
            value="2019-11-19"
          >
            19
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-selectable is-working_day"
            type="button"
            value="2019-11-20"
          >
            20
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-selectable is-working_day"
            type="button"
            value="2019-11-21"
          >
            21
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-selectable is-working_day"
            type="button"
            value="2019-11-22"
          >
            22
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-selectable is-weekend"
            type="button"
            value="2019-11-23"
          >
            23
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-selectable is-weekend"
            type="button"
            value="2019-11-24"
          >
            24
          </button>
        </div>
      </div>
    </div>
    <div
      class="test-class-name-week"
    >
      <div
        class="test-class-name-week_number"
      >
        48
      </div>
      <div
        class="test-class-name-week_days"
      >
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-selectable is-working_day"
            type="button"
            value="2019-11-25"
          >
            25
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-selectable is-working_day"
            type="button"
            value="2019-11-26"
          >
            26
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-today is-working_day"
            type="button"
            value="2019-11-27"
          >
            27
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-end_selection is-not_selectable is-selected is-working_day"
            type="button"
            value="2019-11-28"
          >
            28
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-selected is-start_selection is-working_day"
            type="button"
            value="2019-11-29"
          >
            29
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-current_month is-not_selectable is-weekend"
            type="button"
            value="2019-11-30"
          >
            30
          </button>
        </div>
        <div
          class="test-class-name-day_wrapper"
        >
          <button
            class="test-class-name-day is-next_month is-not_selectable is-weekend"
            type="button"
            value="2019-12-01"
          >
            1
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
